--- a/styles/main.css
+++ b/styles/main.css
@@ -49,10 +49,10 @@ body {
 }
 
 .content-wrapper {
-    width               : calc(100% - 2rem);
+    width               : calc(100% - 6rem);
     max-width           : var(--max-width);
-    margin-left         : 1rem;
-    margin-right        : 1rem;
+    margin-left         : 3rem;
+    margin-right        : 3rem;
 }
 
 @media screen and (min-width: 1024px) {
@@ -131,11 +131,13 @@ main {
 main .content {
     display                     : grid;
     grid-template-columns       : repeat(2, 1fr);
-    justify-content             : space-between;
+    /* grid-template-rows          : repeat(12, 1fr); */
+    justify-content             : end;
+    /* gap                         : 2rem; */
     padding                     : 2rem 0;
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 720px) {
     main .content {
         grid-template-columns       : repeat(3, 1fr);
     }
@@ -155,6 +157,7 @@ img {
 }
 
 main .card-container .card-full-name {
+    grid-column     : 1 / 3;
     font-family     : var(--subtitle-font);
     font-size       : 0.875rem;
     font-weight     : 600;
