--- a/styles/main.css
+++ b/styles/main.css
@@ -14,7 +14,7 @@
     /*  Variables del proyecto  */
 
     /*  Anchura máxima del contenido en desktop */
-    --max-width     : 960px;
+    --max-width     : 1000px;
 
     /*  Colores  */
     --text-color        : #000;
@@ -43,6 +43,8 @@
 body {
     display                 : flex;
     flex-direction          : column;
+    align-items             : center;
+    width                   : 100%;
     min-height              : 100vh;
     background-color        : var(--bgd-color);
 }
@@ -130,14 +132,15 @@ main .content {
     grid-template-columns       : repeat(2, 1fr);
     grid-template-rows          : repeat(3, 320px);
     padding                     : 2rem 0;
-    justify-items: center;
+    justify-items               : stretch;
+    gap                         : 2rem;
 } 
 
- @media screen and (min-width: 720px) {
+@media screen and (min-width: 720px) {
     main .content {
         grid-template-columns       : repeat(3, 1fr);
-    }
-     
+        grid-template-rows          : repeat(2, 500px);
+    }    
 }
 
 
@@ -176,6 +179,12 @@ main .card-container:nth-of-type(2n) {
 }
 
 @media screen and (min-width: 720px) {
+
+    .card-container {
+        width       : 270px;
+        height      : 400px;
+    }
+
     main .card-container .card-full-name {
         font-size       : 1.125rem;
     }
@@ -191,6 +200,8 @@ main .card-container:nth-of-type(2n) {
     main .card-container:nth-of-type(3n+2) {
         align-self: end;
     }
+
+
 }
 /***
     FOOTER
