--- a/styles/main.css
+++ b/styles/main.css
@@ -14,7 +14,7 @@
     /*  Variables del proyecto  */
 
     /*  Anchura máxima del contenido en desktop */
-    --max-width     : 1000px;
+    --max-width     : 700px;
 
     /*  Colores  */
     --text-color        : #000;
@@ -27,16 +27,23 @@
     --footer-font       : 'Montserrat', sans-serif;
 
     /* Tamaños */
-    /* --header-height             : 10rem; */
     --title-font-size           : 2.25rem;
     --subtitle-font-size        : 1.125rem;
     --description-font-size     : 0.875rem;
+    --roll-font-size            : 0.625rem;
 
+}
+
+@media screen and (min-width: 700px) {
+    :root {
+        --description-font-size     : 1.125rem;
+        --roll-font-size            : 0.75rem;
+    }
 }
 
 @media screen and (min-width: 1200px) {
     :root {
-        --max-width : 1200px;
+        --max-width : 900px;
     }
 }
 
@@ -44,7 +51,6 @@ body {
     display                 : flex;
     flex-direction          : column;
     align-items             : center;
-    width                   : 100%;
     min-height              : 100vh;
     background-color        : var(--bgd-color);
 }
@@ -56,7 +62,8 @@ body {
     margin-right        : 1.5rem;
 }
 
-@media screen and (min-width: 1024px) {
+
+@media screen and (min-width: 700px) {
     .content-wrapper {
         width           : 100%;
         margin-left     : auto;
@@ -106,20 +113,18 @@ body {
 @media screen and (min-width: 720px) {
 
     .page-header .section-container {
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns       : 1fr 1fr;
     }
 
     .page-header p {
         font-size       : 1.125rem;
         max-width       : 65%;
-    }
-    
+    }  
 }
 
 /***
     MAIN
 */
-
 
 main {
     display             : flex;
@@ -145,38 +150,41 @@ main .content {
 
 
 .card-container {
-    display: grid;
-    grid-template-columns: 1fr 25px;
-    grid-template-rows: 1fr 50px;
-    gap: 0.5rem;
-    width: 160px;
-    height: 230px;
+    display                     : grid;
+    grid-template-columns       : 1fr 25px;
+    grid-template-rows          : 1fr 50px;
+    gap                         : 0.5rem;
+    width                       : 160px;
+    height                      : 230px;
 }
 
 main .card-container .card-full-name {
     grid-column     : 1 / 3;
     font-family     : var(--subtitle-font);
-    font-size       : 0.875rem;
+    font-size       : var(--description-font-size);
     font-weight     : 600;
 }
 
 main .card-container .card-roll {
     font-family         : var(--title-font);
-    font-size           : 0.625rem;
-    font-weight         : 400;
+    font-size           : var(--roll-font-size);
+    font-weight         : 700;
     writing-mode        : vertical-lr;
-
 }
 
 
 main .card-container img {
-    width: 100%;
+    width       : 100%;
 }
 
+@media screen and (max-width: 700px) {
 
-main .card-container:nth-of-type(2n) {
-    align-self: end;
+    main .card-container:nth-of-type(2n) {
+        align-self      : end;
+    }
+    
 }
+
 
 @media screen and (min-width: 720px) {
 
@@ -184,24 +192,11 @@ main .card-container:nth-of-type(2n) {
         width       : 270px;
         height      : 400px;
     }
-
-    main .card-container .card-full-name {
-        font-size       : 1.125rem;
-    }
     
-    main .card-container .card-roll {
-        font-size           : 0.75rem;
-    }
-
-    main .card-container:nth-of-type(2n+2) {
-        align-self: start;
-    }
 
     main .card-container:nth-of-type(3n+2) {
-        align-self: end;
+        align-self      : end;
     }
-
-
 }
 /***
     FOOTER
